opam-version: "1.2"
maintainer: "Mauricio Fernández"
authors: [
  "Mr. Number"
  "Mike Wells"
  "Mauricio Fernández"
  "Brad Langel"
]
license: "BSD3"
homepage: "https://github.com/mfp/ocaml-statsd-client/"
dev-repo: "git://github.com/mfp/ocaml-statsd-client"
bug-reports: "https://github.com/mfp/ocaml-statsd-client/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "ppx_sexp_conv"
  "sexplib"
  "lwt"
]